# dider213olabhubscope

./: README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 20200609_0126_0f61881252a2_add_course_courseuser_user_tables.py  20200610_0433_657c0270436b_initial_user_course_courseuser_tables.py  20200615_2302_439ecf10a557_add_google_id_and_name_make_lecture_.py
project/: __init__.py  auth.py  config.py  course.py  home.py  models.py
project/static/: main.js
project/templates/: base.html  index.html
project/templates/auth/: login.html  logout.html
project/templates/course/: index.html  users.html  users_create.html
project/templates/home/: course_detail.html  index.html  profile.html
project/templates/partials/: messages.html
